--- a/style.css
+++ b/style.css
@@ -15,9 +15,16 @@ body {
     justify-content: center;
     font-family: 'Roboto', sans-serif;
 }
+
+
+.bug{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
 .wrapper {
     display: flex;
-    max-width: 960px;
+    max-width: 80%;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
@@ -40,9 +47,10 @@ body {
 }
 
 .toDo{
-    width: 350px;
-    height: 350px;
-    border-radius: 10%;
+    width: 100px;
+    height: 100px;
+    margin-bottom: 20px;
+    border-radius: 20px;
     background-color: aqua;
     display: flex;
     justify-content: center;
@@ -133,4 +141,15 @@ span {
     height: 40px;
     width: 120px;
     background-color: rgb(206, 41, 41);
+}
+
+
+.del {
+
+        width: 1em;
+        height: 1em;
+        background-color: red;
+        clip-path: polygon(20% 0%, 0% 20%, 30% 50%, 0% 80%, 20% 100%, 50% 70%, 80% 100%, 100% 80%, 70% 50%, 100% 20%, 80% 0%, 50% 30%);
+        cursor: pointer;
+      
 }
